# bs-redis-desktop-client

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  app.key  auto-imports.d.ts  build.rs  components.d.ts  env.d.ts  eslint.config.js  global.d.ts  index.html  pack.iss  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  quasar.config.ts  readme.md  readme_cn.md  repalce.cjs  repalce.mjs  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.vitest.json  uno.config.ts  vite.config.ts  vitest.config.ts
.github/workflows/: build-test.yml  rust.yml  tauri-build.yml
docs/: uri.md  zh_CN.md
icons/: icon.icns  icon.psd
public/: loading.css
src/: App.vue  Layout.vue  app.rs  database.ts  db.ts  env.d.ts  events.rs  interface.ts  logger.rs  main.rs  main.ts  rdb.rs  resource.rc  response.rs  router.ts  sqlite.rs  types.ts  utils.rs  vite-env.d.ts
src-tauri/: Cargo.toml  Release.entitlements  tauri.conf.json  tauri.conf.release.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  desktop.rs  lib.rs  main.rs  models.rs  rdb.rs  response.rs  sqlite.rs  structs.rs  tabs.rs  utils.rs
src-tauri/src/api/: defines.rs  mod.rs  rdb.rs  resp.rs  router.rs
src-tauri/src/routes/: connections.rs  info.rs  mod.rs  string.rs
src-tauri/src/tools/: mod.rs
src/api/: backend.ts  index.ts
src/boot/: axios.ts  i18n.ts
src/components/: CoHostTab.vue  EssentialLink.vue  NavigatorItem.vue  WindowOperationButtonGroup.vue
src/css/: quasar.variables.scss
src/hooks/: actions.tsx  life.ts  pager.tsx  tab.ts  update.tsx
src/i18n/: en.ts  index.ts  lang.ts  zh_cn.ts
src/i18n/en-US/: index.ts
src/i18n/zh-CN/: index.ts
src/layout/: Layout.vue  TabViewLayout.vue
src/layouts/: HostViewLayout.vue  MainLayout.vue  layout.vue
src/pages/: IndexPage.vue
src/pages/errors/: NotFound.vue
src/pages/home/: home.vue  index.vue
src/pages/home/components/: CoHostForm.vue
src/pages/host/: database.vue  detail.vue  host-info.vue  index.vue  layout.vue  status.vue
src/pages/host/components/: CoDatabase.vue  CoHostInfo.vue
src/pages/host/components/CoDatabase/: CoDbs.vue  CoInformation.vue  CoKeys.vue  index.vue
src/pages/host/components/CoHostInfo/: index.vue
src/pages/host/components/CoInfoHeader/: index.vue
src/pages/host/components/CoKeys/: actions.tsx  index.vue  new.vue
src/pages/host/key-types/co-hash/: index.vue
src/pages/host/key-types/co-list/: index.vue
src/pages/host/key-types/co-none/: index.vue
src/pages/settings/: index.vue
src/pages/settings/components/: CoLanguage.vue  CoListItem.vue  CoTheme.vue
src/router/: index.ts  routes.ts
src/routes/: connection.rs  database.rs  mod.rs  rdb_connection.rs
src/store/: tabs.ts
src/stores/: example-store.ts  index.ts  req.ts  tab.ts
src/tools/: index.ts  keys.ts  tray.ts
src/views/: HomeView.vue  HostsView.vue  TabView.vue
src/views/HostView/: Host.vue  HostForm.vue  index.ts
src/views/SettingsView/: LangSettings.vue  SettingsMenuRow.vue  SettingsView.vue  index.ts
src/views/TabView/: Data.vue  Page.vue  Status.vue  index.ts
src/worker/: keys.ts
ui/: .gitignore  LICENSE  package.json  pnpm-lock.yaml  readme.md
ui/config/: development.cfg  production.cfg  webpack.config.js  webpack.prod.js
ui/mock/: a.js  home.js  loading.js  login.js
ui/mock/home/: main.js
ui/public/: index.html  loading.html
ui/src/: global_event.js  main.js
ui/src/components/ContentBody/: index.js
ui/src/components/DatabseMenu/: index.js
ui/src/components/Icon/: index.js
ui/src/components/JsonViewer/: index.js
ui/src/components/PubSub/: index.js
ui/src/i18n/: en.js  index.js  zh.js
ui/src/layout/: index.vue
ui/src/router/: index.js  routes.js
ui/src/store/: index.js
ui/src/style/: common.scss
ui/src/tools/: alert.js  invoke.js  request.js  storage.js
ui/src/views/: detail.vue  home.vue  lookMore.vue  set.vue
views/: index.html  index_win.html
views/css/: app.css  bootstrap.css  connection.css  framework.css
views/dialog/: connection.html
views/js/: app.js  connection.js  database.js  dialog.js  init.js  util.js
windows_platform_resource/: build.rc  dpi-aware.mainfest
(+32 files in other folders)
