[package]
name = "rd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9.0"
sciter-rs = "*"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
flume = "0.10.12"

[target.'cfg(windows)'.build-dependencies]
embed-resource="*"