[package]
name = "rd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9.0"
sciter-rs = "*"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
flume = "0.10.12"
once_cell = "1.11.0"
parking_lot = "0.12.0"
rusqlite = { version = "0.27.0", features = ["bundled"] }
uuid = { version = "1.0.0", features = ["v4"] }
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.*"
futures = "0.*"
[target.'cfg(windows)'.dependencies]
windows = { version = "0.24.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging"
] }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "*"